# Golddigger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mt5_gateway.cpp  patcher.cpp  predictor.cpp  trainer.cpp  tuner.cpp
Data/: xauusd-d1-bid.csv  xauusd-h1-bid.csv  xauusd-m15-bid-2024-01-01-2026-03-11.csv
DataUpdate/: daily_csv_updater.cpp  daily_csv_updater.h
Indicators/: indicators.cpp  indicators.h
MT5/: README.md  mt5_protocol.cpp  mt5_protocol.h  mt5_zeromq_client.cpp  mt5_zeromq_client.h
MT5/MQL5/Experts/Golddigger/: GolddiggerBridgeEA.mq5
MT5/MQL5/Include/Golddigger/: GolddiggerJson.mqh  GolddiggerProtocol.mqh  GolddiggerZeroMqNative.mqh
MarketData/: alpha_vantage_fx_provider.cpp  alpha_vantage_fx_provider.h  candle_data_provider.cpp  candle_data_provider.h  dukascopy_cli_provider.cpp  dukascopy_cli_provider.h  mt5_zeromq_provider.cpp  mt5_zeromq_provider.h
Prediction/: predictor_engine.cpp  predictor_engine.h
Training/: model_types.h  trainer_worker.cpp  trainer_worker.h  training_support.cpp  training_support.h  tuner_worker.cpp  tuner_worker.h
Utils/: process_signals.cpp  process_signals.h  utils.cpp  utils.h
